name:           ghc-toolkit-base
version:        0.0.1
category:       Compiler
stability:      alpha
homepage:       https://github.com/tweag/asterius#readme
bug-reports:    https://github.com/tweag/asterius/issues
maintainer:     Shao Cheng <cheng.shao@tweag.io>
copyright:      (c) 2018 Tweag I/O
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 2.0
extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

source-repository head
  type: git
  location: https://github.com/tweag/asterius

library ghc-toolkit-base-base
  reexported-modules:
      Annotations
    , ApiAnnotation
    , Ar
    , AsmCodeGen
    , AsmUtils
    , Avail
    , Bag
    , BasicTypes
    , BinFingerprint
    , BinIface
    , Binary
    , Bitmap
    , BkpSyn
    , BlockId
    , BooleanFormula
    , BufWrite
    , BuildTyCl
    , ByteCodeAsm
    , ByteCodeGen
    , ByteCodeInstr
    , ByteCodeItbls
    , ByteCodeLink
    , ByteCodeTypes
    , CLabel
    , CPrim
    , CSE
    , CallArity
    , CgUtils
    , Check
    , Class
    , CmdLineParser
    , Cmm
    , CmmBuildInfoTables
    , CmmCallConv
    , CmmCommonBlockElim
    , CmmContFlowOpt
    , CmmExpr
    , CmmImplementSwitchPlans
    , CmmLayoutStack
    , CmmLex
    , CmmLint
    , CmmLive
    , CmmMachOp
    , CmmMonad
    , CmmNode
    , CmmOpt
    , CmmParse
    , CmmSink
    , CmmSwitch
    , CmmType
    , CmmUtils
    , CoAxiom
    , CodeGen.Platform
    , CodeGen.Platform.ARM
    , CodeGen.Platform.ARM64
    , CodeGen.Platform.NoRegs
    , CodeGen.Platform.PPC
    , CodeGen.Platform.PPC_Darwin
    , CodeGen.Platform.SPARC
    , CodeGen.Platform.X86
    , CodeGen.Platform.X86_64
    , CodeOutput
    , Coercion
    , ConLike
    , Config
    , Constants
    , Convert
    , CoreArity
    , CoreFVs
    , CoreLint
    , CoreMonad
    , CoreOpt
    , CorePrep
    , CoreSeq
    , CoreStats
    , CoreSubst
    , CoreSyn
    , CoreTidy
    , CoreToStg
    , CoreUnfold
    , CoreUtils
    , CostCentre
    , CostCentreState
    , Coverage
    , Ctype
    , DataCon
    , Debug
    , Debugger
    , DebuggerUtils
    , Demand
    , Desugar
    , Digraph
    , DmdAnal
    , DriverBkp
    , DriverMkDepend
    , DriverPhases
    , DriverPipeline
    , DsArrows
    , DsBinds
    , DsCCall
    , DsExpr
    , DsForeign
    , DsGRHSs
    , DsListComp
    , DsMeta
    , DsMonad
    , DsUsage
    , DsUtils
    , Dwarf
    , Dwarf.Constants
    , Dwarf.Types
    , DynFlags
    , DynamicLoading
    , Elf
    , Encoding
    , EnumSet
    , ErrUtils
    , Exception
    , Exitify
    , FV
    , FamInst
    , FamInstEnv
    , FastFunctions
    , FastMutInt
    , FastString
    , FastStringEnv
    , FieldLabel
    , FileCleanup
    , Finder
    , Fingerprint
    , FiniteMap
    , FlagChecker
    , FloatIn
    , FloatOut
    , ForeignCall
    , Format
    , FunDeps
    , GHC
    , GHCi
    , GhcMake
    , GhcMonad
    , GhcPlugins
    , GraphBase
    , GraphColor
    , GraphOps
    , GraphPpr
    , HaddockUtils
    , HeaderInfo
    , Hooks
    , Hoopl.Block
    , Hoopl.Collections
    , Hoopl.Dataflow
    , Hoopl.Graph
    , Hoopl.Label
    , HsBinds
    , HsDecls
    , HsDoc
    , HsDumpAst
    , HsExpr
    , HsExtension
    , HsImpExp
    , HsInstances
    , HsLit
    , HsPat
    , HsSyn
    , HsTypes
    , HsUtils
    , HscMain
    , HscStats
    , HscTypes
    , IOEnv
    , Id
    , IdInfo
    , IfaceEnv
    , IfaceSyn
    , IfaceType
    , Inst
    , InstEnv
    , Instruction
    , InteractiveEval
    , InteractiveEvalTypes
    , Json
    , Kind
    , KnownUniques
    , Lexeme
    , Lexer
    , LiberateCase
    , Linker
    , ListSetOps
    , ListT
    , Literal
    , Llvm
    , Llvm.AbsSyn
    , Llvm.MetaData
    , Llvm.PpLlvm
    , Llvm.Types
    , LlvmCodeGen
    , LlvmCodeGen.Base
    , LlvmCodeGen.CodeGen
    , LlvmCodeGen.Data
    , LlvmCodeGen.Ppr
    , LlvmCodeGen.Regs
    , LlvmMangler
    , LoadIface
    , Match
    , MatchCon
    , MatchLit
    , Maybes
    , MkCore
    , MkGraph
    , MkId
    , MkIface
    , Module
    , MonadUtils
    , NCGMonad
    , Name
    , NameCache
    , NameEnv
    , NameSet
    , NameShape
    , OccName
    , OccurAnal
    , OptCoercion
    , OrdList
    , Outputable
    , PIC
    , PPC.CodeGen
    , PPC.Cond
    , PPC.Instr
    , PPC.Ppr
    , PPC.RegInfo
    , PPC.Regs
    , PackageConfig
    , Packages
    , Pair
    , Panic
    , Parser
    , PatSyn
    , PipelineMonad
    , PlaceHolder
    , Platform
    , PlatformConstants
    , Plugins
    , PmExpr
    , PprBase
    , PprC
    , PprCmm
    , PprCmmDecl
    , PprCmmExpr
    , PprColour
    , PprCore
    , PprTyThing
    , PrelInfo
    , PrelNames
    , PrelRules
    , Pretty
    , PrimOp
    , ProfInit
    , RdrHsSyn
    , RdrName
    , Reg
    , RegAlloc.Graph.ArchBase
    , RegAlloc.Graph.ArchX86
    , RegAlloc.Graph.Coalesce
    , RegAlloc.Graph.Main
    , RegAlloc.Graph.Spill
    , RegAlloc.Graph.SpillClean
    , RegAlloc.Graph.SpillCost
    , RegAlloc.Graph.Stats
    , RegAlloc.Graph.TrivColorable
    , RegAlloc.Linear.Base
    , RegAlloc.Linear.FreeRegs
    , RegAlloc.Linear.JoinToTargets
    , RegAlloc.Linear.Main
    , RegAlloc.Linear.PPC.FreeRegs
    , RegAlloc.Linear.SPARC.FreeRegs
    , RegAlloc.Linear.StackMap
    , RegAlloc.Linear.State
    , RegAlloc.Linear.Stats
    , RegAlloc.Linear.X86.FreeRegs
    , RegAlloc.Linear.X86_64.FreeRegs
    , RegAlloc.Liveness
    , RegClass
    , RepType
    , RnBinds
    , RnEnv
    , RnExpr
    , RnFixity
    , RnHsDoc
    , RnModIface
    , RnNames
    , RnPat
    , RnSource
    , RnSplice
    , RnTypes
    , RnUnbound
    , RnUtils
    , RtClosureInspect
    , Rules
    , SAT
    , SMRep
    , SPARC.AddrMode
    , SPARC.Base
    , SPARC.CodeGen
    , SPARC.CodeGen.Amode
    , SPARC.CodeGen.Base
    , SPARC.CodeGen.CondCode
    , SPARC.CodeGen.Expand
    , SPARC.CodeGen.Gen32
    , SPARC.CodeGen.Gen64
    , SPARC.CodeGen.Sanity
    , SPARC.Cond
    , SPARC.Imm
    , SPARC.Instr
    , SPARC.Ppr
    , SPARC.Regs
    , SPARC.ShortcutJump
    , SPARC.Stack
    , SetLevels
    , SimplCore
    , SimplEnv
    , SimplMonad
    , SimplStg
    , SimplUtils
    , Simplify
    , SpecConstr
    , Specialise
    , SrcLoc
    , State
    , StaticPtrTable
    , StgCmmClosure as GHCStgCmmClosure
    , StgCse
    , StgLint
    , StgStats
    , StgSyn
    , Stream
    , StringBuffer
    , SysTools
    , SysTools.BaseDir
    , SysTools.ExtraObj
    , SysTools.Info
    , SysTools.Process
    , SysTools.Tasks
    , SysTools.Terminal
    , THNames
    , TargetReg
    , TcAnnotations
    , TcArrows
    , TcBackpack
    , TcBinds
    , TcCanonical
    , TcClassDcl
    , TcDefaults
    , TcDeriv
    , TcDerivInfer
    , TcDerivUtils
    , TcEnv
    , TcErrors
    , TcEvTerm
    , TcEvidence
    , TcExpr
    , TcFlatten
    , TcForeign
    , TcGenDeriv
    , TcGenFunctor
    , TcGenGenerics
    , TcHsSyn
    , TcHsType
    , TcIface
    , TcInstDcls
    , TcInteract
    , TcMType
    , TcMatches
    , TcPat
    , TcPatSyn
    , TcPluginM
    , TcRnDriver
    , TcRnExports
    , TcRnMonad
    , TcRnTypes
    , TcRules
    , TcSMonad
    , TcSigs
    , TcSimplify
    , TcSplice
    , TcTyClsDecls
    , TcTyDecls
    , TcType
    , TcTypeNats
    , TcTypeable
    , TcUnify
    , TcValidity
    , TidyPgm
    , TmOracle
    , ToIface
    , TrieMap
    , TyCon
    , TyCoRep
    , Type
    , TysPrim
    , TysWiredIn
    , UnVarGraph
    , UnariseStg
    , Unify
    , UniqDFM
    , UniqDSet
    , UniqFM
    , UniqMap
    , UniqSet
    , UniqSupply
    , Unique
    , Util
    , Var
    , VarEnv
    , VarSet
    , Vectorise
    , Vectorise.Builtins
    , Vectorise.Builtins.Base
    , Vectorise.Builtins.Initialise
    , Vectorise.Convert
    , Vectorise.Env
    , Vectorise.Exp
    , Vectorise.Generic.Description
    , Vectorise.Generic.PADict
    , Vectorise.Generic.PAMethods
    , Vectorise.Generic.PData
    , Vectorise.Monad
    , Vectorise.Monad.Base
    , Vectorise.Monad.Global
    , Vectorise.Monad.InstEnv
    , Vectorise.Monad.Local
    , Vectorise.Monad.Naming
    , Vectorise.Type.Classify
    , Vectorise.Type.Env
    , Vectorise.Type.TyConDecl
    , Vectorise.Type.Type
    , Vectorise.Utils
    , Vectorise.Utils.Base
    , Vectorise.Utils.Closure
    , Vectorise.Utils.Hoisting
    , Vectorise.Utils.PADict
    , Vectorise.Utils.Poly
    , Vectorise.Var
    , Vectorise.Vect
    , WorkWrap
    , WwLib
    , X86.CodeGen
    , X86.Cond
    , X86.Instr
    , X86.Ppr
    , X86.RegInfo
    , X86.Regs
  build-depends:
      ghc
  default-language: Haskell2010

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wno-name-shadowing
  exposed-modules:
      CmmInfo
    , CmmPipeline
    , CmmProcPoint
    , StgCmm
    , StgCmmArgRep
    , StgCmmBind
    , StgCmmClosure
    , StgCmmCon
    , StgCmmEnv
    , StgCmmExpr
    , StgCmmExtCode
    , StgCmmForeign
    , StgCmmHeap
    , StgCmmHpc
    , StgCmmLayout
    , StgCmmMonad
    , StgCmmPrim
    , StgCmmProf
    , StgCmmTicky
    , StgCmmUtils
  reexported-modules:
      Annotations
    , ApiAnnotation
    , Ar
    , AsmCodeGen
    , AsmUtils
    , Avail
    , Bag
    , BasicTypes
    , BinFingerprint
    , BinIface
    , Binary
    , Bitmap
    , BkpSyn
    , BlockId
    , BooleanFormula
    , BufWrite
    , BuildTyCl
    , ByteCodeAsm
    , ByteCodeGen
    , ByteCodeInstr
    , ByteCodeItbls
    , ByteCodeLink
    , ByteCodeTypes
    , CLabel
    , CPrim
    , CSE
    , CallArity
    , CgUtils
    , Check
    , Class
    , CmdLineParser
    , Cmm
    , CmmBuildInfoTables
    , CmmCallConv
    , CmmCommonBlockElim
    , CmmContFlowOpt
    , CmmExpr
    , CmmImplementSwitchPlans
    , CmmLayoutStack
    , CmmLex
    , CmmLint
    , CmmLive
    , CmmMachOp
    , CmmMonad
    , CmmNode
    , CmmOpt
    , CmmParse
    , CmmSink
    , CmmSwitch
    , CmmType
    , CmmUtils
    , CoAxiom
    , CodeGen.Platform
    , CodeGen.Platform.ARM
    , CodeGen.Platform.ARM64
    , CodeGen.Platform.NoRegs
    , CodeGen.Platform.PPC
    , CodeGen.Platform.PPC_Darwin
    , CodeGen.Platform.SPARC
    , CodeGen.Platform.X86
    , CodeGen.Platform.X86_64
    , CodeOutput
    , Coercion
    , ConLike
    , Config
    , Constants
    , Convert
    , CoreArity
    , CoreFVs
    , CoreLint
    , CoreMonad
    , CoreOpt
    , CorePrep
    , CoreSeq
    , CoreStats
    , CoreSubst
    , CoreSyn
    , CoreTidy
    , CoreToStg
    , CoreUnfold
    , CoreUtils
    , CostCentre
    , CostCentreState
    , Coverage
    , Ctype
    , DataCon
    , Debug
    , Debugger
    , DebuggerUtils
    , Demand
    , Desugar
    , Digraph
    , DmdAnal
    , DriverBkp
    , DriverMkDepend
    , DriverPhases
    , DriverPipeline
    , DsArrows
    , DsBinds
    , DsCCall
    , DsExpr
    , DsForeign
    , DsGRHSs
    , DsListComp
    , DsMeta
    , DsMonad
    , DsUsage
    , DsUtils
    , Dwarf
    , Dwarf.Constants
    , Dwarf.Types
    , DynFlags
    , DynamicLoading
    , Elf
    , Encoding
    , EnumSet
    , ErrUtils
    , Exception
    , Exitify
    , FV
    , FamInst
    , FamInstEnv
    , FastFunctions
    , FastMutInt
    , FastString
    , FastStringEnv
    , FieldLabel
    , FileCleanup
    , Finder
    , Fingerprint
    , FiniteMap
    , FlagChecker
    , FloatIn
    , FloatOut
    , ForeignCall
    , Format
    , FunDeps
    , GHC
    , GHCi
    , GhcMake
    , GhcMonad
    , GhcPlugins
    , GraphBase
    , GraphColor
    , GraphOps
    , GraphPpr
    , HaddockUtils
    , HeaderInfo
    , Hooks
    , Hoopl.Block
    , Hoopl.Collections
    , Hoopl.Dataflow
    , Hoopl.Graph
    , Hoopl.Label
    , HsBinds
    , HsDecls
    , HsDoc
    , HsDumpAst
    , HsExpr
    , HsExtension
    , HsImpExp
    , HsInstances
    , HsLit
    , HsPat
    , HsSyn
    , HsTypes
    , HsUtils
    , HscMain
    , HscStats
    , HscTypes
    , IOEnv
    , Id
    , IdInfo
    , IfaceEnv
    , IfaceSyn
    , IfaceType
    , Inst
    , InstEnv
    , Instruction
    , InteractiveEval
    , InteractiveEvalTypes
    , Json
    , Kind
    , KnownUniques
    , Lexeme
    , Lexer
    , LiberateCase
    , Linker
    , ListSetOps
    , ListT
    , Literal
    , Llvm
    , Llvm.AbsSyn
    , Llvm.MetaData
    , Llvm.PpLlvm
    , Llvm.Types
    , LlvmCodeGen
    , LlvmCodeGen.Base
    , LlvmCodeGen.CodeGen
    , LlvmCodeGen.Data
    , LlvmCodeGen.Ppr
    , LlvmCodeGen.Regs
    , LlvmMangler
    , LoadIface
    , Match
    , MatchCon
    , MatchLit
    , Maybes
    , MkCore
    , MkGraph
    , MkId
    , MkIface
    , Module
    , MonadUtils
    , NCGMonad
    , Name
    , NameCache
    , NameEnv
    , NameSet
    , NameShape
    , OccName
    , OccurAnal
    , OptCoercion
    , OrdList
    , Outputable
    , PIC
    , PPC.CodeGen
    , PPC.Cond
    , PPC.Instr
    , PPC.Ppr
    , PPC.RegInfo
    , PPC.Regs
    , PackageConfig
    , Packages
    , Pair
    , Panic
    , Parser
    , PatSyn
    , PipelineMonad
    , PlaceHolder
    , Platform
    , PlatformConstants
    , Plugins
    , PmExpr
    , PprBase
    , PprC
    , PprCmm
    , PprCmmDecl
    , PprCmmExpr
    , PprColour
    , PprCore
    , PprTyThing
    , PrelInfo
    , PrelNames
    , PrelRules
    , Pretty
    , PrimOp
    , ProfInit
    , RdrHsSyn
    , RdrName
    , Reg
    , RegAlloc.Graph.ArchBase
    , RegAlloc.Graph.ArchX86
    , RegAlloc.Graph.Coalesce
    , RegAlloc.Graph.Main
    , RegAlloc.Graph.Spill
    , RegAlloc.Graph.SpillClean
    , RegAlloc.Graph.SpillCost
    , RegAlloc.Graph.Stats
    , RegAlloc.Graph.TrivColorable
    , RegAlloc.Linear.Base
    , RegAlloc.Linear.FreeRegs
    , RegAlloc.Linear.JoinToTargets
    , RegAlloc.Linear.Main
    , RegAlloc.Linear.PPC.FreeRegs
    , RegAlloc.Linear.SPARC.FreeRegs
    , RegAlloc.Linear.StackMap
    , RegAlloc.Linear.State
    , RegAlloc.Linear.Stats
    , RegAlloc.Linear.X86.FreeRegs
    , RegAlloc.Linear.X86_64.FreeRegs
    , RegAlloc.Liveness
    , RegClass
    , RepType
    , RnBinds
    , RnEnv
    , RnExpr
    , RnFixity
    , RnHsDoc
    , RnModIface
    , RnNames
    , RnPat
    , RnSource
    , RnSplice
    , RnTypes
    , RnUnbound
    , RnUtils
    , RtClosureInspect
    , Rules
    , SAT
    , SMRep
    , SPARC.AddrMode
    , SPARC.Base
    , SPARC.CodeGen
    , SPARC.CodeGen.Amode
    , SPARC.CodeGen.Base
    , SPARC.CodeGen.CondCode
    , SPARC.CodeGen.Expand
    , SPARC.CodeGen.Gen32
    , SPARC.CodeGen.Gen64
    , SPARC.CodeGen.Sanity
    , SPARC.Cond
    , SPARC.Imm
    , SPARC.Instr
    , SPARC.Ppr
    , SPARC.Regs
    , SPARC.ShortcutJump
    , SPARC.Stack
    , SetLevels
    , SimplCore
    , SimplEnv
    , SimplMonad
    , SimplStg
    , SimplUtils
    , Simplify
    , SpecConstr
    , Specialise
    , SrcLoc
    , State
    , StaticPtrTable
    , StgCse
    , StgLint
    , StgStats
    , StgSyn
    , Stream
    , StringBuffer
    , SysTools
    , SysTools.BaseDir
    , SysTools.ExtraObj
    , SysTools.Info
    , SysTools.Process
    , SysTools.Tasks
    , SysTools.Terminal
    , THNames
    , TargetReg
    , TcAnnotations
    , TcArrows
    , TcBackpack
    , TcBinds
    , TcCanonical
    , TcClassDcl
    , TcDefaults
    , TcDeriv
    , TcDerivInfer
    , TcDerivUtils
    , TcEnv
    , TcErrors
    , TcEvTerm
    , TcEvidence
    , TcExpr
    , TcFlatten
    , TcForeign
    , TcGenDeriv
    , TcGenFunctor
    , TcGenGenerics
    , TcHsSyn
    , TcHsType
    , TcIface
    , TcInstDcls
    , TcInteract
    , TcMType
    , TcMatches
    , TcPat
    , TcPatSyn
    , TcPluginM
    , TcRnDriver
    , TcRnExports
    , TcRnMonad
    , TcRnTypes
    , TcRules
    , TcSMonad
    , TcSigs
    , TcSimplify
    , TcSplice
    , TcTyClsDecls
    , TcTyDecls
    , TcType
    , TcTypeNats
    , TcTypeable
    , TcUnify
    , TcValidity
    , TidyPgm
    , TmOracle
    , ToIface
    , TrieMap
    , TyCon
    , TyCoRep
    , Type
    , TysPrim
    , TysWiredIn
    , UnVarGraph
    , UnariseStg
    , Unify
    , UniqDFM
    , UniqDSet
    , UniqFM
    , UniqMap
    , UniqSet
    , UniqSupply
    , Unique
    , Util
    , Var
    , VarEnv
    , VarSet
    , Vectorise
    , Vectorise.Builtins
    , Vectorise.Builtins.Base
    , Vectorise.Builtins.Initialise
    , Vectorise.Convert
    , Vectorise.Env
    , Vectorise.Exp
    , Vectorise.Generic.Description
    , Vectorise.Generic.PADict
    , Vectorise.Generic.PAMethods
    , Vectorise.Generic.PData
    , Vectorise.Monad
    , Vectorise.Monad.Base
    , Vectorise.Monad.Global
    , Vectorise.Monad.InstEnv
    , Vectorise.Monad.Local
    , Vectorise.Monad.Naming
    , Vectorise.Type.Classify
    , Vectorise.Type.Env
    , Vectorise.Type.TyConDecl
    , Vectorise.Type.Type
    , Vectorise.Utils
    , Vectorise.Utils.Base
    , Vectorise.Utils.Closure
    , Vectorise.Utils.Hoisting
    , Vectorise.Utils.PADict
    , Vectorise.Utils.Poly
    , Vectorise.Var
    , Vectorise.Vect
    , WorkWrap
    , WwLib
    , X86.CodeGen
    , X86.Cond
    , X86.Instr
    , X86.Ppr
    , X86.RegInfo
    , X86.Regs
  build-depends:
      base
    , bytestring
    , containers
    , ghc-toolkit-base-base
  default-language: Haskell2010
